--- a/kondensatorius/index.html
+++ b/kondensatorius/index.html
@@ -5,6 +5,7 @@
     <script src="../p5.js" type="text/javascript"></script>
     <script src="../quicksettings.js" type="text/javascript"></script>
     <script src="../p5.gui.js" type="text/javascript"></script>
+    <script src="draggable.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
   </head>
